--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,5 +7,5 @@
     <% end %>
   </select>
   <br><br>
-  <input type="submit" class="get" value="Get Memebers" />
+  <input type="submit" class="get" value="Get Members" />
 </form>
